add notebooks for wav2vec2 inference

--- a/notebooks/run_mehrdad_wav2vec.ipynb
+++ b/notebooks/run_mehrdad_wav2vec.ipynb
@@ -2,25 +2,95 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec2399bc-466a-4b26-bff9-8bc68f17e9a3",
+   "id": "bd34343c-2617-462c-8809-de97b3bbbe18",
+   "metadata": {},
+   "source": [
+    "# setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ff9190d4-1c0d-4397-bdee-53208a379f20",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "execution": {
+     "iopub.execute_input": "2025-07-07T06:41:53.404496Z",
+     "iopub.status.busy": "2025-07-07T06:41:53.403442Z",
+     "iopub.status.idle": "2025-07-07T06:41:53.409387Z",
+     "shell.execute_reply": "2025-07-07T06:41:53.408168Z",
+     "shell.execute_reply.started": "2025-07-07T06:41:53.404457Z"
+    }
    },
+   "outputs": [],
+   "source": [
+    "# !pip install -r ../requirements.txt\n",
+    "# !pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c6b1fd82-e13f-4e38-9fda-b8b6567a49e1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-07T06:42:01.957946Z",
+     "iopub.status.busy": "2025-07-07T06:42:01.957560Z",
+     "iopub.status.idle": "2025-07-07T06:42:02.464663Z",
+     "shell.execute_reply": "2025-07-07T06:42:02.463369Z",
+     "shell.execute_reply.started": "2025-07-07T06:42:01.957915Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon Jul  7 06:42:02 2025       \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 570.124.06             Driver Version: 570.124.06     CUDA Version: 12.8     |\n",
+      "|-----------------------------------------+------------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                        |               MIG M. |\n",
+      "|=========================================+========================+======================|\n",
+      "|   0  NVIDIA GeForce RTX 3090        Off |   00000000:00:07.0 Off |                  N/A |\n",
+      "| 30%   18C    P8              9W /  350W |       2MiB /  24576MiB |      0%      Default |\n",
+      "|                                         |                        |                  N/A |\n",
+      "+-----------------------------------------+------------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                              |\n",
+      "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
+      "|        ID   ID                                                               Usage      |\n",
+      "|=========================================================================================|\n",
+      "|  No running processes found                                                             |\n",
+      "+-----------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec2399bc-466a-4b26-bff9-8bc68f17e9a3",
+   "metadata": {},
    "source": [
     "# load dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8e0c979a-e2a9-42c9-95d3-218a37204d53",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T13:07:04.597142Z",
-     "iopub.status.busy": "2025-07-02T13:07:04.596504Z",
-     "iopub.status.idle": "2025-07-02T13:07:08.091404Z",
-     "shell.execute_reply": "2025-07-02T13:07:08.090129Z",
-     "shell.execute_reply.started": "2025-07-02T13:07:04.597093Z"
+     "iopub.execute_input": "2025-07-07T06:45:35.274103Z",
+     "iopub.status.busy": "2025-07-07T06:45:35.272882Z",
+     "iopub.status.idle": "2025-07-07T06:45:39.638140Z",
+     "shell.execute_reply": "2025-07-07T06:45:39.637312Z",
+     "shell.execute_reply.started": "2025-07-07T06:45:35.274035Z"
     }
    },
    "outputs": [
@@ -29,11 +99,11 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['client_id', 'path', 'sentence_id', 'sentence', 'sentence_domain', 'up_votes', 'down_votes', 'age', 'gender', 'accents', 'variant', 'locale', 'segment', 'audio', 'normalized_transcription'],\n",
-       "    num_rows: 100\n",
+       "    num_rows: 10676\n",
        "})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,31 +111,29 @@
    "source": [
     "from datasets import load_dataset\n",
     "dataset = load_dataset(\"hsekhalilian/commonvoice\", split=\"dev\")\n",
-    "dataset = dataset.select(indices=range(100))\n",
+    "# dataset = dataset.select(indices=range(100))\n",
     "dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a331665a-7534-4a26-ae26-695d788149af",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# load model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7cbdfcc6-c65d-4a5c-a02e-c9073f16cd0a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T13:07:08.093554Z",
-     "iopub.status.busy": "2025-07-02T13:07:08.093093Z",
-     "iopub.status.idle": "2025-07-02T13:07:12.531153Z",
-     "shell.execute_reply": "2025-07-02T13:07:12.529749Z",
-     "shell.execute_reply.started": "2025-07-02T13:07:08.093521Z"
+     "iopub.execute_input": "2025-07-07T06:45:39.639212Z",
+     "iopub.status.busy": "2025-07-07T06:45:39.638949Z",
+     "iopub.status.idle": "2025-07-07T06:45:44.084625Z",
+     "shell.execute_reply": "2025-07-07T06:45:44.083665Z",
+     "shell.execute_reply.started": "2025-07-07T06:45:39.639195Z"
     }
    },
    "outputs": [],
@@ -76,15 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "88924e03-e4b6-4321-89e0-89b4feadaff9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T13:07:12.532537Z",
-     "iopub.status.busy": "2025-07-02T13:07:12.532004Z",
-     "iopub.status.idle": "2025-07-02T13:07:12.626074Z",
-     "shell.execute_reply": "2025-07-02T13:07:12.623986Z",
-     "shell.execute_reply.started": "2025-07-02T13:07:12.532513Z"
+     "iopub.execute_input": "2025-07-07T06:45:44.085471Z",
+     "iopub.status.busy": "2025-07-07T06:45:44.085126Z",
+     "iopub.status.idle": "2025-07-07T06:45:44.227321Z",
+     "shell.execute_reply": "2025-07-07T06:45:44.226329Z",
+     "shell.execute_reply.started": "2025-07-07T06:45:44.085454Z"
     }
    },
    "outputs": [
@@ -94,7 +162,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,15 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ae298118-476d-4efb-ad76-d83b1fb11423",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T13:07:12.627595Z",
-     "iopub.status.busy": "2025-07-02T13:07:12.627329Z",
-     "iopub.status.idle": "2025-07-02T13:07:14.325390Z",
-     "shell.execute_reply": "2025-07-02T13:07:14.324040Z",
-     "shell.execute_reply.started": "2025-07-02T13:07:12.627573Z"
+     "iopub.execute_input": "2025-07-07T06:45:44.228651Z",
+     "iopub.status.busy": "2025-07-07T06:45:44.228469Z",
+     "iopub.status.idle": "2025-07-07T06:45:46.796969Z",
+     "shell.execute_reply": "2025-07-07T06:45:46.795978Z",
+     "shell.execute_reply.started": "2025-07-07T06:45:44.228622Z"
     }
    },
    "outputs": [
@@ -136,43 +204,42 @@
   {
    "cell_type": "markdown",
    "id": "52250a28-982a-408c-a5d5-bdf8612fcbc9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# predict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "0e3bc2e1-515d-4c43-ac95-8a9b2f695028",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T14:08:13.211009Z",
-     "iopub.status.busy": "2025-07-02T14:08:13.210342Z",
-     "iopub.status.idle": "2025-07-02T14:08:13.219306Z",
-     "shell.execute_reply": "2025-07-02T14:08:13.217479Z",
-     "shell.execute_reply.started": "2025-07-02T14:08:13.210954Z"
+     "iopub.execute_input": "2025-07-07T06:45:46.797826Z",
+     "iopub.status.busy": "2025-07-07T06:45:46.797653Z",
+     "iopub.status.idle": "2025-07-07T06:45:46.803334Z",
+     "shell.execute_reply": "2025-07-07T06:45:46.802371Z",
+     "shell.execute_reply.started": "2025-07-07T06:45:46.797809Z"
     }
    },
    "outputs": [],
    "source": [
     "import sys_append\n",
+    "import numpy as np\n",
     "from utils.normalizer import persian_normalizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "86cec36b-b2c7-4cd0-b5f6-f59221338bc3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T13:07:14.334421Z",
-     "iopub.status.busy": "2025-07-02T13:07:14.334169Z",
-     "iopub.status.idle": "2025-07-02T13:07:14.360081Z",
-     "shell.execute_reply": "2025-07-02T13:07:14.358893Z",
-     "shell.execute_reply.started": "2025-07-02T13:07:14.334403Z"
+     "iopub.execute_input": "2025-07-07T06:45:46.804385Z",
+     "iopub.status.busy": "2025-07-07T06:45:46.803918Z",
+     "iopub.status.idle": "2025-07-07T06:45:46.809226Z",
+     "shell.execute_reply": "2025-07-07T06:45:46.808642Z",
+     "shell.execute_reply.started": "2025-07-07T06:45:46.804368Z"
     }
    },
    "outputs": [],
@@ -193,21 +260,30 @@
     "\n",
     "    pred_ids = torch.argmax(logits, dim=-1)\n",
     "\n",
-    "    batch[\"predicted\"] = [persian_normalizer(item) for item in processor.batch_decode(pred_ids)]\n",
-    "    return batch"
+    "    batch[\"prediction\"] = processor.batch_decode(pred_ids)\n",
+    "    \n",
+    "    return batch\n",
+    "\n",
+    "\n",
+    "def normalize_prediction(example):\n",
+    "    try:\n",
+    "        example['normalized_prediction'] = persian_normalizer(example['prediction'])\n",
+    "        return example\n",
+    "    except:\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "276f5280-21dc-4c46-a377-69b3ce53e3e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T13:07:17.700452Z",
-     "iopub.status.busy": "2025-07-02T13:07:17.699732Z",
-     "iopub.status.idle": "2025-07-02T13:07:34.024071Z",
-     "shell.execute_reply": "2025-07-02T13:07:34.022831Z",
-     "shell.execute_reply.started": "2025-07-02T13:07:17.700396Z"
+     "iopub.execute_input": "2025-07-07T06:45:51.199259Z",
+     "iopub.status.busy": "2025-07-07T06:45:51.198757Z",
+     "iopub.status.idle": "2025-07-07T07:06:19.778151Z",
+     "shell.execute_reply": "2025-07-07T07:06:19.777460Z",
+     "shell.execute_reply.started": "2025-07-07T06:45:51.199224Z"
     }
    },
    "outputs": [
@@ -215,18 +291,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parameter 'function'=<function predict at 0x7528fd5ca520> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n"
+      "Parameter 'function'=<function predict at 0x79a7fa124720> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6067f615ba0c42d9a3b2c45ef765232b",
+       "model_id": "3564b9dab5af494a859f7fbce170f007",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/100 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/10676 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -234,20 +310,20 @@
     }
    ],
    "source": [
-    "result = dataset.map(predict, batched=True, batch_size=4)"
+    "result = dataset.map(predict, batched=True, batch_size=64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "aaa787a1-6be2-49fe-acc9-afab97a28f6b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T14:07:53.436601Z",
-     "iopub.status.busy": "2025-07-02T14:07:53.435924Z",
-     "iopub.status.idle": "2025-07-02T14:07:53.448144Z",
-     "shell.execute_reply": "2025-07-02T14:07:53.446515Z",
-     "shell.execute_reply.started": "2025-07-02T14:07:53.436549Z"
+     "iopub.execute_input": "2025-07-07T07:06:19.779145Z",
+     "iopub.status.busy": "2025-07-07T07:06:19.778963Z",
+     "iopub.status.idle": "2025-07-07T07:06:19.785147Z",
+     "shell.execute_reply": "2025-07-07T07:06:19.784443Z",
+     "shell.execute_reply.started": "2025-07-07T07:06:19.779129Z"
     }
    },
    "outputs": [
@@ -255,12 +331,12 @@
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['client_id', 'path', 'sentence_id', 'sentence', 'sentence_domain', 'up_votes', 'down_votes', 'age', 'gender', 'accents', 'variant', 'locale', 'segment', 'audio', 'normalized_transcription', 'predicted'],\n",
-       "    num_rows: 100\n",
+       "    features: ['client_id', 'path', 'sentence_id', 'sentence', 'sentence_domain', 'up_votes', 'down_votes', 'age', 'gender', 'accents', 'variant', 'locale', 'segment', 'audio', 'normalized_transcription', 'prediction'],\n",
+       "    num_rows: 10676\n",
        "})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,18 +348,24 @@
   {
    "cell_type": "markdown",
    "id": "67fd2a79-5ed5-49cb-b40a-8163efea3e08",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# evaluate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e3fedced-92a6-4ab1-a358-bb643b0795fb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-07T07:06:19.786040Z",
+     "iopub.status.busy": "2025-07-07T07:06:19.785798Z",
+     "iopub.status.idle": "2025-07-07T07:06:19.841610Z",
+     "shell.execute_reply": "2025-07-07T07:06:19.841021Z",
+     "shell.execute_reply.started": "2025-07-07T07:06:19.786017Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from utils.evaluate import evaluate_asr"
@@ -291,32 +373,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "ad01718b-0355-4831-a3d7-424a86f8e927",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-02T14:09:35.724779Z",
-     "iopub.status.busy": "2025-07-02T14:09:35.724118Z",
-     "iopub.status.idle": "2025-07-02T14:09:35.752987Z",
-     "shell.execute_reply": "2025-07-02T14:09:35.751174Z",
-     "shell.execute_reply.started": "2025-07-02T14:09:35.724725Z"
+     "iopub.execute_input": "2025-07-07T07:09:58.417366Z",
+     "iopub.status.busy": "2025-07-07T07:09:58.416937Z",
+     "iopub.status.idle": "2025-07-07T07:09:59.219443Z",
+     "shell.execute_reply": "2025-07-07T07:09:59.218792Z",
+     "shell.execute_reply.started": "2025-07-07T07:09:58.417332Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'wer': 0.28858024691358025, 'cer': 0.07687231936654569}"
+       "{'wer': 0.31191391970501287, 'cer': 0.07564881281060187}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluate_asr(result[\"normalized_transcription\"], result[\"predicted\"])"
+    "evaluate_asr(result[\"normalized_transcription\"], result[\"prediction\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "42d867de-863a-4de1-af72-8eb581ac2846",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-07T07:10:10.967175Z",
+     "iopub.status.busy": "2025-07-07T07:10:10.966373Z",
+     "iopub.status.idle": "2025-07-07T07:10:11.150075Z",
+     "shell.execute_reply": "2025-07-07T07:10:11.149297Z",
+     "shell.execute_reply.started": "2025-07-07T07:10:10.967137Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32022248708780293"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from jiwer import wer\n",
+    "wer(result[\"sentence\"], result[\"prediction\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0dd2645-8cd4-4df1-8faa-9020029098a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
