update wav2vec2 notebook

--- a/notebooks/wav2vec2_inference.ipynb
+++ b/notebooks/wav2vec2_inference.ipynb
@@ -44,15 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "033af508-f8b1-4a7e-a7e4-0c8c68a3da43",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-07T13:38:53.878594Z",
-     "iopub.status.busy": "2025-07-07T13:38:53.878145Z",
-     "iopub.status.idle": "2025-07-07T13:38:57.441875Z",
-     "shell.execute_reply": "2025-07-07T13:38:57.440782Z",
-     "shell.execute_reply.started": "2025-07-07T13:38:53.878559Z"
+     "iopub.execute_input": "2025-07-08T06:45:12.522996Z",
+     "iopub.status.busy": "2025-07-08T06:45:12.522818Z",
+     "iopub.status.idle": "2025-07-08T06:45:13.506232Z",
+     "shell.execute_reply": "2025-07-08T06:45:13.505822Z",
+     "shell.execute_reply.started": "2025-07-08T06:45:12.522983Z"
     }
    },
    "outputs": [],
@@ -63,15 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "f10146dd-44b2-4adb-8ad3-6ce381ce86af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-07T13:40:27.926613Z",
-     "iopub.status.busy": "2025-07-07T13:40:27.926184Z",
-     "iopub.status.idle": "2025-07-07T13:40:27.933212Z",
-     "shell.execute_reply": "2025-07-07T13:40:27.931991Z",
-     "shell.execute_reply.started": "2025-07-07T13:40:27.926580Z"
+     "iopub.execute_input": "2025-07-08T06:45:14.632420Z",
+     "iopub.status.busy": "2025-07-08T06:45:14.631994Z",
+     "iopub.status.idle": "2025-07-08T06:45:15.176334Z",
+     "shell.execute_reply": "2025-07-08T06:45:15.175938Z",
+     "shell.execute_reply.started": "2025-07-08T06:45:14.632398Z"
     }
    },
    "outputs": [
@@ -87,7 +87,10 @@
     "model_path = \"/home/jovyan/.cache/models/m3hrdadfi/wav2vec2-large-xlsr-persian-v3/\"\n",
     "parts = model_path.strip(\"/\").split(\"/\")\n",
     "model_name = f\"{parts[-2]}/{parts[-1]}\"\n",
-    "print(model_name)"
+    "print(model_name)\n",
+    "\n",
+    "processor = Wav2Vec2Processor.from_pretrained(model_path)\n",
+    "model = Wav2Vec2ForCTC.from_pretrained(model_path).to(device)"
    ]
   },
   {
@@ -100,15 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "135fc182-26e9-451f-a6e3-b7436f1f76be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-07T12:52:28.690524Z",
-     "iopub.status.busy": "2025-07-07T12:52:28.690340Z",
-     "iopub.status.idle": "2025-07-07T12:52:29.887621Z",
-     "shell.execute_reply": "2025-07-07T12:52:29.886530Z",
-     "shell.execute_reply.started": "2025-07-07T12:52:28.690508Z"
+     "iopub.execute_input": "2025-07-08T06:45:16.181079Z",
+     "iopub.status.busy": "2025-07-08T06:45:16.180898Z",
+     "iopub.status.idle": "2025-07-08T06:45:16.740241Z",
+     "shell.execute_reply": "2025-07-08T06:45:16.739932Z",
+     "shell.execute_reply.started": "2025-07-08T06:45:16.181066Z"
     }
    },
    "outputs": [
