add a notebook to show leaderboard and update leaderboard

--- a/notebooks/wav2vec2_inference.ipynb
+++ b/notebooks/wav2vec2_inference.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "0d625a45-2f9c-4d8f-97b0-2bec958d2d5f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-07T13:38:53.693510Z",
-     "iopub.status.busy": "2025-07-07T13:38:53.693164Z",
-     "iopub.status.idle": "2025-07-07T13:38:53.700409Z",
-     "shell.execute_reply": "2025-07-07T13:38:53.698903Z",
-     "shell.execute_reply.started": "2025-07-07T13:38:53.693462Z"
+     "iopub.execute_input": "2025-07-08T10:50:33.443001Z",
+     "iopub.status.busy": "2025-07-08T10:50:33.442831Z",
+     "iopub.status.idle": "2025-07-08T10:50:38.234022Z",
+     "shell.execute_reply": "2025-07-08T10:50:38.233564Z",
+     "shell.execute_reply.started": "2025-07-08T10:50:33.442987Z"
     }
    },
    "outputs": [
@@ -44,15 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "033af508-f8b1-4a7e-a7e4-0c8c68a3da43",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-08T06:45:12.522996Z",
-     "iopub.status.busy": "2025-07-08T06:45:12.522818Z",
-     "iopub.status.idle": "2025-07-08T06:45:13.506232Z",
-     "shell.execute_reply": "2025-07-08T06:45:13.505822Z",
-     "shell.execute_reply.started": "2025-07-08T06:45:12.522983Z"
+     "iopub.execute_input": "2025-07-08T10:50:39.417827Z",
+     "iopub.status.busy": "2025-07-08T10:50:39.417291Z",
+     "iopub.status.idle": "2025-07-08T10:50:40.735283Z",
+     "shell.execute_reply": "2025-07-08T10:50:40.734588Z",
+     "shell.execute_reply.started": "2025-07-08T10:50:39.417800Z"
     }
    },
    "outputs": [],
@@ -63,15 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f10146dd-44b2-4adb-8ad3-6ce381ce86af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-08T06:45:14.632420Z",
-     "iopub.status.busy": "2025-07-08T06:45:14.631994Z",
-     "iopub.status.idle": "2025-07-08T06:45:15.176334Z",
-     "shell.execute_reply": "2025-07-08T06:45:15.175938Z",
-     "shell.execute_reply.started": "2025-07-08T06:45:14.632398Z"
+     "iopub.execute_input": "2025-07-08T10:56:26.439521Z",
+     "iopub.status.busy": "2025-07-08T10:56:26.439235Z",
+     "iopub.status.idle": "2025-07-08T10:56:40.529741Z",
+     "shell.execute_reply": "2025-07-08T10:56:40.529393Z",
+     "shell.execute_reply.started": "2025-07-08T10:56:26.439499Z"
     }
    },
    "outputs": [
@@ -79,12 +79,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m3hrdadfi/wav2vec2-large-xlsr-persian-v3\n"
+      "hsekhalilian/wav2vec2-custom-model\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9e2b42d4eab54a379fb62076f51ccd29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "preprocessor_config.json:   0%|          | 0.00/256 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ae64b4e76634e6da654bf3a0ff023d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "325d1fc04bc84fd5ba42b4d1064c4dc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/482 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "136a8c5668824bafb4e63a47bc701bf5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/96.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba74d7798cc94bc688ebe67b9f91f7b0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f35d3bab8bd347bdb9f9004883950190",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/1.26G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "model_path = \"/home/jovyan/.cache/models/m3hrdadfi/wav2vec2-large-xlsr-persian-v3/\"\n",
+    "\n",
     "parts = model_path.strip(\"/\").split(\"/\")\n",
     "model_name = f\"{parts[-2]}/{parts[-1]}\"\n",
     "print(model_name)\n",
@@ -103,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "135fc182-26e9-451f-a6e3-b7436f1f76be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-08T06:45:16.181079Z",
-     "iopub.status.busy": "2025-07-08T06:45:16.180898Z",
-     "iopub.status.idle": "2025-07-08T06:45:16.740241Z",
-     "shell.execute_reply": "2025-07-08T06:45:16.739932Z",
-     "shell.execute_reply.started": "2025-07-08T06:45:16.181066Z"
+     "iopub.execute_input": "2025-07-08T10:58:33.925074Z",
+     "iopub.status.busy": "2025-07-08T10:58:33.923463Z",
+     "iopub.status.idle": "2025-07-08T10:58:33.981284Z",
+     "shell.execute_reply": "2025-07-08T10:58:33.980655Z",
+     "shell.execute_reply.started": "2025-07-08T10:58:33.925014Z"
     }
    },
    "outputs": [
@@ -162,15 +247,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "e3d5d970-4bcd-41ac-bd12-0e695a6bb598",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-07T12:52:29.889082Z",
-     "iopub.status.busy": "2025-07-07T12:52:29.888909Z",
-     "iopub.status.idle": "2025-07-07T12:52:52.223078Z",
-     "shell.execute_reply": "2025-07-07T12:52:52.221990Z",
-     "shell.execute_reply.started": "2025-07-07T12:52:29.889065Z"
+     "iopub.execute_input": "2025-07-08T10:58:36.451000Z",
+     "iopub.status.busy": "2025-07-08T10:58:36.450677Z",
+     "iopub.status.idle": "2025-07-08T10:59:01.739127Z",
+     "shell.execute_reply": "2025-07-08T10:59:01.738228Z",
+     "shell.execute_reply.started": "2025-07-08T10:58:36.450976Z"
     }
    },
    "outputs": [
@@ -178,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:22<00:00, 44.82it/s]"
+      "100%|██████████| 1000/1000 [00:25<00:00, 39.57it/s]"
      ]
     },
     {
@@ -186,7 +271,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "WER: 27.52%\n"
+      "WER: 25.36%\n"
      ]
     },
     {
