--- a/notebooks/nemo_inference.ipynb
+++ b/notebooks/nemo_inference.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install nemo_toolkit['all']"
+    "# !pip install nemo_toolkit['asr']"
    ]
   },
   {
@@ -137,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "f42dc58e-0520-4f08-8edb-2a2f8ae7978a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T11:56:39.536767Z",
-     "iopub.status.busy": "2025-07-09T11:56:39.536520Z",
-     "iopub.status.idle": "2025-07-09T11:56:39.541521Z",
-     "shell.execute_reply": "2025-07-09T11:56:39.540742Z",
-     "shell.execute_reply.started": "2025-07-09T11:56:39.536745Z"
+     "iopub.execute_input": "2025-07-09T13:02:58.583875Z",
+     "iopub.status.busy": "2025-07-09T13:02:58.583586Z",
+     "iopub.status.idle": "2025-07-09T13:03:02.470728Z",
+     "shell.execute_reply": "2025-07-09T13:03:02.470122Z",
+     "shell.execute_reply.started": "2025-07-09T13:02:58.583852Z"
     }
    },
    "outputs": [],
@@ -163,20 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "4f60d5ff-8a01-438d-a96f-0add1f3424dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T11:56:40.412827Z",
-     "iopub.status.busy": "2025-07-09T11:56:40.412542Z",
-     "iopub.status.idle": "2025-07-09T11:56:43.806172Z",
-     "shell.execute_reply": "2025-07-09T11:56:43.805474Z",
-     "shell.execute_reply.started": "2025-07-09T11:56:40.412804Z"
+     "iopub.execute_input": "2025-07-09T13:03:02.471784Z",
+     "iopub.status.busy": "2025-07-09T13:03:02.471394Z",
+     "iopub.status.idle": "2025-07-09T13:03:06.118782Z",
+     "shell.execute_reply": "2025-07-09T13:03:06.118060Z",
+     "shell.execute_reply.started": "2025-07-09T13:03:02.471771Z"
     }
    },
    "outputs": [],
    "source": [
-    "asr_model = nemo_asr.models.EncDecHybridRNNTCTCBPEModel.from_pretrained(model_name=\"nvidia/stt_fa_fastconformer_hybrid_large\").eval().cuda()"
+    "asr_model = nemo_asr.models.EncDecHybridRNNTCTCBPEModel.from_pretrained(model_name=\"nvidia/stt_fa_fastconformer_hybrid_large\").eval()"
    ]
   },
   {
@@ -235,6 +235,86 @@
     "error_rate = wer(references, predictions)\n",
     "print(f\"\\nWER: {error_rate:.2%}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66fcb0e-7c0a-4767-9d6c-744da1e89509",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c6162732-f409-4ffa-9959-f002d7a99bae",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-09T12:57:26.081648Z",
+     "iopub.status.busy": "2025-07-09T12:57:26.081385Z",
+     "iopub.status.idle": "2025-07-09T12:57:26.088870Z",
+     "shell.execute_reply": "2025-07-09T12:57:26.086799Z",
+     "shell.execute_reply.started": "2025-07-09T12:57:26.081625Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import sys_append"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0ef1375a-e155-4990-aaa0-ba43f8587915",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-09T12:57:26.091329Z",
+     "iopub.status.busy": "2025-07-09T12:57:26.091099Z",
+     "iopub.status.idle": "2025-07-09T12:57:27.891773Z",
+     "shell.execute_reply": "2025-07-09T12:57:27.891102Z",
+     "shell.execute_reply.started": "2025-07-09T12:57:26.091308Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from utils.create_dataset import create_nemo_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3f360e52-3fb8-4aca-9fc7-dcce5c430b89",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-09T12:57:27.892383Z",
+     "iopub.status.busy": "2025-07-09T12:57:27.892201Z",
+     "iopub.status.idle": "2025-07-09T12:57:33.734196Z",
+     "shell.execute_reply": "2025-07-09T12:57:33.733861Z",
+     "shell.execute_reply.started": "2025-07-09T12:57:27.892372Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing dev split: 100%|██████████| 1000/1000 [00:04<00:00, 215.56it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_nemo_dataset({\"dataset\": \"hsekhalilian/commonvoice\", \"split\": \"dev\", \"sample_size\": 1000})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11a36371-9864-44b0-bfe5-ef2c28e110fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
