add seamless to the benchmarks

--- a/notebooks/nemo_inference.ipynb
+++ b/notebooks/nemo_inference.ipynb
@@ -52,20 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "8d9f2498-4def-4948-a780-7ba54a5cd8e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T11:56:34.313835Z",
-     "iopub.status.busy": "2025-07-09T11:56:34.313577Z",
-     "iopub.status.idle": "2025-07-09T11:56:34.947235Z",
-     "shell.execute_reply": "2025-07-09T11:56:34.946309Z",
-     "shell.execute_reply.started": "2025-07-09T11:56:34.313813Z"
+     "iopub.execute_input": "2025-07-13T05:52:09.247537Z",
+     "iopub.status.busy": "2025-07-13T05:52:09.247133Z",
+     "iopub.status.idle": "2025-07-13T05:52:09.252882Z",
+     "shell.execute_reply": "2025-07-13T05:52:09.251655Z",
+     "shell.execute_reply.started": "2025-07-13T05:52:09.247474Z"
     }
    },
    "outputs": [],
    "source": [
-    "dataset = load_dataset(\"hsekhalilian/commonvoice\", split=\"dev\")\n",
+    "dataset_name = \"hsekhalilian/commonvoice\"\n",
+    "dataset = load_dataset(dataset_name, split=\"dev\")\n",
     "dataset = dataset.select(range(1000))"
    ]
   },
@@ -84,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "output_dir = os.path.expanduser(\"~/.cache/datasets/commonvoice/audio_files/\")\n",
+    "output_dir = os.path.expanduser(f\"~/.cache/datasets/{dataset_name.replace(\"/\", \"___\")}/audio_files/\")\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "output_manifest = os.path.join(output_dir, \"..\", \"dev_manifest.json\")\n",
