add old version of seamless inference

--- a/notebooks/seamless_inference.ipynb
+++ b/notebooks/seamless_inference.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "markdown",
    "id": "39adb2e6-0e94-4b8a-9eea-725d3b45ebc3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# load model"
    ]
@@ -97,7 +99,9 @@
   {
    "cell_type": "markdown",
    "id": "98815dac-97a9-423b-bfaf-ba47005fd3de",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# load dataset"
    ]
@@ -254,7 +258,9 @@
   {
    "cell_type": "markdown",
    "id": "bb950a6f-b992-4021-877d-6ea75cfa6ae8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# speech to text"
    ]
