--- a/notebooks/nemo_inference.ipynb
+++ b/notebooks/nemo_inference.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ae710085-2f0e-4cb2-897a-acdf2be415ae",
+   "execution_count": 17,
+   "id": "9b14aefc-898d-4e16-bdc4-2867f8f050a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T09:30:26.430604Z",
-     "iopub.status.busy": "2025-07-09T09:30:26.430304Z",
-     "iopub.status.idle": "2025-07-09T09:30:26.434888Z",
-     "shell.execute_reply": "2025-07-09T09:30:26.434170Z",
-     "shell.execute_reply.started": "2025-07-09T09:30:26.430577Z"
+     "iopub.execute_input": "2025-07-15T09:45:22.596858Z",
+     "iopub.status.busy": "2025-07-15T09:45:22.596610Z",
+     "iopub.status.idle": "2025-07-15T09:45:22.599931Z",
+     "shell.execute_reply": "2025-07-15T09:45:22.599421Z",
+     "shell.execute_reply.started": "2025-07-15T09:45:22.596829Z"
     }
    },
    "outputs": [],
    "source": [
-    "# !pip install nemo_toolkit['asr']"
+    "# !pip install -r ../requirements.txt"
    ]
   },
   {
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "76828217-ac09-4f54-abcf-fab3246334ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T11:56:34.107254Z",
-     "iopub.status.busy": "2025-07-09T11:56:34.106883Z",
-     "iopub.status.idle": "2025-07-09T11:56:34.111246Z",
-     "shell.execute_reply": "2025-07-09T11:56:34.110338Z",
-     "shell.execute_reply.started": "2025-07-09T11:56:34.107231Z"
+     "iopub.execute_input": "2025-07-15T08:33:39.832976Z",
+     "iopub.status.busy": "2025-07-15T08:33:39.832375Z",
+     "iopub.status.idle": "2025-07-15T08:33:39.836426Z",
+     "shell.execute_reply": "2025-07-15T08:33:39.835715Z",
+     "shell.execute_reply.started": "2025-07-15T08:33:39.832955Z"
     }
    },
    "outputs": [],
@@ -52,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "8d9f2498-4def-4948-a780-7ba54a5cd8e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-13T05:52:09.247537Z",
-     "iopub.status.busy": "2025-07-13T05:52:09.247133Z",
-     "iopub.status.idle": "2025-07-13T05:52:09.252882Z",
-     "shell.execute_reply": "2025-07-13T05:52:09.251655Z",
-     "shell.execute_reply.started": "2025-07-13T05:52:09.247474Z"
+     "iopub.execute_input": "2025-07-15T08:33:40.398831Z",
+     "iopub.status.busy": "2025-07-15T08:33:40.398563Z",
+     "iopub.status.idle": "2025-07-15T08:33:41.168790Z",
+     "shell.execute_reply": "2025-07-15T08:33:41.168053Z",
+     "shell.execute_reply.started": "2025-07-15T08:33:40.398812Z"
     }
    },
    "outputs": [],
@@ -72,15 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "47018617-e266-4d8c-a0e1-d143b5c89559",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T11:56:34.948707Z",
-     "iopub.status.busy": "2025-07-09T11:56:34.948436Z",
-     "iopub.status.idle": "2025-07-09T11:56:38.346778Z",
-     "shell.execute_reply": "2025-07-09T11:56:38.346455Z",
-     "shell.execute_reply.started": "2025-07-09T11:56:34.948681Z"
+     "iopub.execute_input": "2025-07-15T08:33:41.170047Z",
+     "iopub.status.busy": "2025-07-15T08:33:41.169861Z",
+     "iopub.status.idle": "2025-07-15T08:33:45.339847Z",
+     "shell.execute_reply": "2025-07-15T08:33:45.339341Z",
+     "shell.execute_reply.started": "2025-07-15T08:33:41.170030Z"
     }
    },
    "outputs": [],
@@ -138,15 +138,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f42dc58e-0520-4f08-8edb-2a2f8ae7978a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T13:02:58.583875Z",
-     "iopub.status.busy": "2025-07-09T13:02:58.583586Z",
-     "iopub.status.idle": "2025-07-09T13:03:02.470728Z",
-     "shell.execute_reply": "2025-07-09T13:03:02.470122Z",
-     "shell.execute_reply.started": "2025-07-09T13:02:58.583852Z"
+     "iopub.execute_input": "2025-07-15T08:33:45.340538Z",
+     "iopub.status.busy": "2025-07-15T08:33:45.340321Z",
+     "iopub.status.idle": "2025-07-15T08:33:45.344833Z",
+     "shell.execute_reply": "2025-07-15T08:33:45.344151Z",
+     "shell.execute_reply.started": "2025-07-15T08:33:45.340519Z"
     }
    },
    "outputs": [],
@@ -164,15 +164,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4f60d5ff-8a01-438d-a96f-0add1f3424dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T13:03:02.471784Z",
-     "iopub.status.busy": "2025-07-09T13:03:02.471394Z",
-     "iopub.status.idle": "2025-07-09T13:03:06.118782Z",
-     "shell.execute_reply": "2025-07-09T13:03:06.118060Z",
-     "shell.execute_reply.started": "2025-07-09T13:03:02.471771Z"
+     "iopub.execute_input": "2025-07-15T08:33:45.346041Z",
+     "iopub.status.busy": "2025-07-15T08:33:45.345862Z",
+     "iopub.status.idle": "2025-07-15T08:33:49.604067Z",
+     "shell.execute_reply": "2025-07-15T08:33:49.603342Z",
+     "shell.execute_reply.started": "2025-07-15T08:33:45.346024Z"
     }
    },
    "outputs": [],
@@ -182,15 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6989ddd6-2a66-49f6-beb0-a0ec43a86c78",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-09T11:56:52.835621Z",
-     "iopub.status.busy": "2025-07-09T11:56:52.835317Z",
-     "iopub.status.idle": "2025-07-09T11:57:01.363729Z",
-     "shell.execute_reply": "2025-07-09T11:57:01.363311Z",
-     "shell.execute_reply.started": "2025-07-09T11:56:52.835597Z"
+     "iopub.execute_input": "2025-07-15T08:33:50.645603Z",
+     "iopub.status.busy": "2025-07-15T08:33:50.645269Z",
+     "iopub.status.idle": "2025-07-15T08:34:03.775885Z",
+     "shell.execute_reply": "2025-07-15T08:34:03.775152Z",
+     "shell.execute_reply.started": "2025-07-15T08:33:50.645581Z"
     }
    },
    "outputs": [
@@ -198,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Transcribing: 100%|██████████| 250/250 [00:08<00:00, 29.48it/s]"
+      "Transcribing: 100%|██████████| 250/250 [00:13<00:00, 19.15it/s]"
      ]
     },
     {
@@ -218,7 +218,7 @@
     }
    ],
    "source": [
-    "manifest_path = os.path.expanduser(\"~/.cache/datasets/commonvoice/dev_manifest.json\")\n",
+    "manifest_path = os.path.expanduser(f\"~/.cache/datasets/{dataset_name.replace(\"/\", \"___\")}/dev_manifest.json\")\n",
     "\n",
     "audio_files = []\n",
     "references = []\n",
@@ -235,6 +235,24 @@
     "\n",
     "error_rate = wer(references, predictions)\n",
     "print(f\"\\nWER: {error_rate:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "37c0e09a-a47f-4f33-a67d-cb9dce578abd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-15T08:36:26.423273Z",
+     "iopub.status.busy": "2025-07-15T08:36:26.422990Z",
+     "iopub.status.idle": "2025-07-15T08:36:26.426779Z",
+     "shell.execute_reply": "2025-07-15T08:36:26.426211Z",
+     "shell.execute_reply.started": "2025-07-15T08:36:26.423255Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   },
   {
